<resources>
    <string name="app_name">GymInstructor</string>

    <!-- Exercise Titles -->

    <string name="ex_squat">Squat</string>
    <string name="ex_bench_press">Bench press</string>
    <string name="ex_deadlift">Deadlift</string>
    <string name="ex_bench_press_mid_grip">Bench press(mid grip)</string>
    <string name="ex_overhead_press">Overhead press</string>
    <string name="ex_biceps_curls">Biceps curls</string>
    <string name="ex_hammer_curls">Hammer curls</string>
    <string name="ex_bench_press_feet_up">Bench press(feet up)</string>
    <!-- Exercise -->

    <string name="exercise_calendar_current_week">Week %1$d</string>
    <string name="exercise_calendar_mon">Mon</string>
    <string name="exercise_calendar_tue">Tue</string>
    <string name="exercise_calendar_wen">Wen</string>
    <string name="exercise_calendar_thu">Thu</string>
    <string name="exercise_calendar_fri">Fri</string>
    <string name="exercise_calendar_sat">Sat</string>
    <string name="exercise_calendar_sun">Sun</string>

    <string name="exercise_block_block_number">Block %1$d</string>
    <string name="exercise_block_progress">Progress</string>
    <string name="exercise_block_completed">%1$d%% Completed</string>

    <string name="exercise_item_sets">Sets</string>
    <string name="exercise_item_reps">Reps</string>
    <string name="exercise_item_RPE">RPE</string>
    <string name="exercise_item_load">Load</string>
    <string name="exercise_item_intensity">%1RM</string>

    <!-- Program Library -->
    <string name="program_library_title">Program Library</string>
    <string name="program_library_item_learn_more">Learn more</string>
    <string name="program_library_item_select_program">Select program</string>
    <string name="program_library_item_days_a_week">%1$d days a week</string>
    <string name="program_library_item_weeks">%1$d weeks</string>
    <string name="program_library_difficulty">Difficulty</string>
    <string name="program_library_difficulty_beginner">Beginner</string>
    <string name="program_library_difficulty_expert">Expert</string>

    <!-- Statistics -->
    <string name="statistics_trainings_freq">%1$d times a week</string>
    <string name="statistics_remainder_off">Remainder off</string>
    <string name="statistics_remainder_onn">Remainder on</string>
    <string name="statistics_all_training_days_count">%1$d times</string>
    <string name="statistics_missed_training_days_count">%1$d%% missed</string>
    <string name="statistics_percent_visits_to_misses_this_month">%1$d%% month</string>
    <string name="statistics_percent_visits_to_misses_total">%1$d%% total</string>

    <!-- Settings -->
    <string name="settings_about_app">About app</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_terms_of_use">Terms of use</string>
    <string name="settings_questions_left">Questions left?</string>
    <string name="settings_other">Other</string>
    <string name="settings_guide">Guide</string>
    <string name="settings_metrics">Choose metrics</string>
    <string name="settings_subscription">Subscription</string>
    <string name="settings_localization">Localization</string>
    <string name="settings_rate_app">Like our app?</string>
    <string name="settings_rate_app_desc">Help us enhance app, send feedback</string>

    <!-- User account -->
    <string name="user_account_title">Profile</string>
    <string name="user_account_measurements">User measurements</string>
    <string name="user_account_find_program">Find program</string>
    <string name="user_account_settings">Settings</string>
    <string name="user_account_calculators">Calculators</string>
    <string name="user_account_notes">Notes</string>
    <string name="user_account_log_out">Log out</string>

    <!-- Quiz -->
    <string name="quiz_question_1">Question 1</string>
    <string name="quiz_question_1_title">What are you planning to increase?</string>
    <string name="quiz_question_1_radio_1">Powerlifting</string>
    <string name="quiz_question_1_radio_2">Bench press</string>
    <string name="quiz_question_1_radio_3">Deadlift</string>Bench press + deadlift
    <string name="quiz_question_2">Question 2</string>
    <string name="quiz_question_2_title">What is your training purpose</string>
    <string name="quiz_question_2_radio_1">Strength</string>
    <string name="quiz_question_2_radio_2">Endurance</string>
    <string name="quiz_question_2_radio_3">Hypertrophy</string>
    <string name="quiz_question_3">Question 3</string>
    <string name="quiz_question_3_title">How ofter do you train a week?</string>
    <string name="quiz_question_3_radio_1">3+ times</string>
    <string name="quiz_question_3_radio_2">2 times</string>
    <string name="quiz_question_3_radio_3">1 time</string>
    <string name="quiz_question_4">Question 4</string>
    <string name="quiz_question_4_title">How much do you lift?</string>
    <string name="quiz_question_4_squat">Max squat</string>
    <string name="quiz_question_4_bench">Max bench press</string>
    <string name="quiz_question_4_deadlift">Max deadlift</string>
    <string name="quiz_next_button">Next</string>
    <string name="quiz_show_programs_button">Show suggested programs</string>

    <!-- Notes -->

    <string name="notes_title">All notes</string>
    <string name="notes_note_create">Create note</string>
    <string name="notes_note_title_field">Enter note title</string>
    <string name="notes_note_body_field">Enter note text</string>
    <string name="notes_note_colors">Colors</string>
    <string name="notes_note_create_button">Create</string>
    <string name="notes_note_edit_note">Edit note</string>
    <string name="notes_note_edit_button">Edit</string>
    <string name="notes_note_delete_note_title">Deleting note</string>
    <string name="notes_note_delete_note_body">Are you sure you want to delete this note? This action can not be undone!</string>
    <string name="notes_note_delete_note_yes">Yes</string>
    <string name="notes_note_delete_note_no">No</string>

    <!-- Barbell Calculator -->

    <string name="calculator_barbell_label_0">Штанга</string>
    <string name="calculator_barbell_label_1">Расчет дисков для штанги</string>
    <string name="calculator_barbell_label_2">Диски должны быть с обеих сторон <b>одинаковые</b>!</string>
    <string name="calculator_barbell_label_3">Введите вес</string>
    <string name="calculator_barbell_label_input">Введите вес</string>
    <string name="calculator_barbell_label_button">Расчитать</string>
    <string name="red_plate">25</string>
    <string name="blue_plate">20</string>
    <string name="yellow_plate">15</string>
    <string name="green_plate">10</string>
    <string name="five_plate">5</string>
    <string name="two_half_plate">2.5</string>
    <string name="one_quarter_plate">1.25</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>