<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.user.settings.SettingsFragment">

    <TextView
        android:id="@+id/settingsAboutTV"
        android:layout_width="0dp"
        android:layout_height="188dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background"
        android:elevation="2dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:text="@string/settings_about_app"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settingsOther"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:text="@string/settings_other"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsAboutTV" />

    <Button
        android:id="@+id/settingsUsageBtn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:elevation="10dp"
        android:gravity="start"
        android:text="@string/settings_terms_of_use"
        android:textColor="@color/white"
        app:icon="@drawable/ic_check"
        app:layout_constraintBottom_toTopOf="@+id/settingsNDABtn"
        app:layout_constraintEnd_toEndOf="@+id/settingsAboutTV"
        app:layout_constraintStart_toStartOf="@+id/settingsAboutTV" />

    <Button
        android:id="@+id/settingsTutorialBtn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:elevation="10dp"
        android:gravity="start"
        android:text="@string/settings_guide"
        android:textColor="@color/white"
        app:icon="@drawable/ic_academic_cap"
        app:layout_constraintBottom_toTopOf="@+id/settingsMetricsBtn"
        app:layout_constraintEnd_toEndOf="@+id/settingsOther"
        app:layout_constraintStart_toStartOf="@+id/settingsOther" />

    <Button
        android:id="@+id/settingsMetricsBtn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:elevation="10dp"
        android:gravity="start"
        android:text="@string/settings_metrics"
        android:textColor="@color/white"
        app:icon="@drawable/ic_variable"
        app:layout_constraintBottom_toTopOf="@+id/settingsSubscriptionBtn"
        app:layout_constraintEnd_toEndOf="@+id/settingsOther"
        app:layout_constraintStart_toStartOf="@+id/settingsOther" />

    <Button
        android:id="@+id/settingsSubscriptionBtn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:elevation="10dp"
        android:gravity="start"
        android:text="@string/settings_subscription"
        android:textColor="@color/white"
        app:icon="@drawable/ic_credit_card"
        app:layout_constraintBottom_toBottomOf="@+id/settingsOther"
        app:layout_constraintEnd_toEndOf="@+id/settingsOther"
        app:layout_constraintStart_toStartOf="@+id/settingsOther" />

    <Button
        android:id="@+id/settingsNDABtn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:elevation="10dp"
        android:gravity="start"
        android:text="@string/settings_privacy_policy"
        android:textColor="@color/white"
        app:icon="@drawable/ic_book"
        app:layout_constraintBottom_toTopOf="@+id/settingsQuestionsBtn"
        app:layout_constraintEnd_toEndOf="@+id/settingsAboutTV"
        app:layout_constraintStart_toStartOf="@+id/settingsAboutTV" />

    <Button
        android:id="@+id/settingsQuestionsBtn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:elevation="10dp"
        android:gravity="start"
        android:text="@string/settings_questions_left"

        android:textColor="@color/white"
        app:icon="@drawable/ic_send"
        app:layout_constraintBottom_toBottomOf="@+id/settingsAboutTV"
        app:layout_constraintEnd_toEndOf="@+id/settingsAboutTV"
        app:layout_constraintStart_toStartOf="@+id/settingsAboutTV" />

</androidx.constraintlayout.widget.ConstraintLayout>